first draft done

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -62,40 +62,41 @@ Each proposal gets 3 reviewers, 1 primary and 2 secondary. Primary gets 5 minute
 
 \item Workshop/Reading
 	\begin{itemize}
+	\item Mon. Workshop: Demography and Selection
+		\begin{itemize}
+		\item SFS, inbreeding, selective sweeps
+		\item HW: run ngsF, plot SFS, (alternatives: run sweepfinder, identify RoH?)
+		\end{itemize}
+	\item Wed. Reading: TBA
+\end{itemize}
+
+\item Workshop/Reading
+	\begin{itemize}
 	\item Mon. Workshop: Population Structure
 		\begin{itemize}
-		\item STRUCTURE theory, $F_{ST}$ 
-		\item HW: run ANGSD admixture, $F_{ST}$ analysis
+		\item STRUCTURE theory, $F_{ST}$, 2D SFS
+		\item HW: run ANGSD admixture, $F_{ST}$ analysis (alternatives: Geneva G', ABBA-BABBA)
 		\end{itemize}
 	\item Wed. Reading: TBA
 \end{itemize}
 
 \item Workshop/Reading
 	\begin{itemize}
-	\item Mon. Workshop: 
+	\item Mon. Workshop: Ranges ??
 		\begin{itemize}
-		\item 
-		\item HW: 
+		\item bedtools, GO terms
+		\item HW: identify introgressed and selected loci
 		\end{itemize}
 	\item Wed. Reading: TBA
 \end{itemize}
 
-\item Workshop/Reading
-	\begin{itemize}
-	\item Mon. Workshop: 
-		\begin{itemize}
-		\item 
-		\item HW: 
-		\end{itemize}
-	\item Wed. Reading: TBA
-\end{itemize}
 
 \item Workshop/Reading
 	\begin{itemize}
-	\item Mon. Workshop: 
+	\item Mon. Workshop: RNA-seq
 		\begin{itemize}
-		\item 
-		\item HW: 
+		\item RNA-seq methods
+		\item HW: compare differential expressed genes with differentiation, introgression
 		\end{itemize}
 	\item Wed. Reading: TBA
 \end{itemize}
