added some dates

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -52,42 +52,42 @@ Each proposal gets 3 reviewers, 1 primary and 2 secondary. Primary gets 5 minute
 
 \item Workshop/Reading
 	\begin{itemize}
-	\item Mon. Workshop: SNPs and diversity
+	\item 1/26 Mon. Workshop: SNPs and diversity
 		\begin{itemize}
 		\item SNP calling, genotype likelihoods, ANGSD intro
 		\item HW: call genotypes, estimate diversity and D across a chromosome (one chromosome per group)
 		\end{itemize}
-	\item Wed. Reading: TBA
+	\item 1/28 Wed. Reading: TBA
 \end{itemize}
 
 \item Workshop/Reading
 	\begin{itemize}
-	\item Mon. Workshop: Demography and Selection
+	\item 2/2 Mon. Workshop: Demography and Selection
 		\begin{itemize}
 		\item SFS, inbreeding, selective sweeps
 		\item HW: run ngsF, plot SFS, (alternatives: run sweepfinder, identify RoH?)
 		\end{itemize}
-	\item Wed. Reading: TBA
+	\item 2/4 Wed. Reading: TBA
 \end{itemize}
 
 \item Workshop/Reading
 	\begin{itemize}
-	\item Mon. Workshop: Population Structure
+	\item 2/9 Mon. Workshop: Population Structure
 		\begin{itemize}
 		\item STRUCTURE theory, $F_{ST}$, 2D SFS
 		\item HW: run ANGSD admixture, $F_{ST}$ analysis (alternatives: Geneva G', ABBA-BABBA)
 		\end{itemize}
-	\item Wed. Reading: TBA
+	\item 2/11 Wed. Reading: TBA
 \end{itemize}
 
 \item Workshop/Reading
 	\begin{itemize}
-	\item Mon. Workshop: Ranges ??
+	\item 2/16 Mon. Workshop: Ranges ??
 		\begin{itemize}
 		\item bedtools, GO terms
 		\item HW: identify introgressed and selected loci
 		\end{itemize}
-	\item Wed. Reading: TBA
+	\item 2/18 Wed. Reading: TBA
 \end{itemize}
 
 \item Workshop/Reading
