--- a/syllabus.tex
+++ b/syllabus.tex
@@ -1,11 +1,17 @@
 \documentclass[]{article}
-
+\usepackage{hyperref}
 \begin{document}
 
 \title{ECL 298 Syllabus}
 \author{Ross-Ibarra}
 \date{Today}
 \maketitle
+
+\section*{Instructors}
+
+\href{mailto:rossibarra@ucdavis.edu}{Jeffrey Ross-Ibarra}\\
+262 Robbins Hall\\
+Office Hours: M 10am-12pm
 
 \section*{Workshops}
 
@@ -23,8 +29,8 @@ Each proposal gets 3 reviewers, 1 primary and 2 secondary. Primary gets 5 minute
 
 \item Lectures
 \begin{itemize}
-\item Introduction to genomics (Whitehead)
-\item Experimental design (Miller)
+\item 1/5 Introduction to genomics (Miller)
+\item 1/7 Experimental design (Whitehead)
 	\begin{itemize}
 	\item HW: work through UNIX tutorial, bring functioning *NIX OS.
 	\end{itemize}
@@ -32,32 +38,32 @@ Each proposal gets 3 reviewers, 1 primary and 2 secondary. Primary gets 5 minute
 
 \item Workshop/Reading
 \begin{itemize}
-	\item Mon. Workshop: Introduction to UNIX, ssh
+	\item 1/12 Workshop: Introduction to UNIX, ssh
 	\begin{itemize}
 		\item basic UNIX, UNIX philosophy, project setup, ssh
 		\item HW: Get a cluster account, make a project directory, download files
 	\end{itemize}
-	\item Wed. Reading: Chapters from Buffalo
+	\item 1/14 Reading: Chapters from Buffalo
 \end{itemize}
 
 \item Workshop/Reading
 	\begin{itemize}
-	\item Mon. Workshop: Sequence data
+	\item 1/19 Workshop: Sequence data
 		\begin{itemize}
 		\item sequence data, data quality issues, read mapping issues
 		\item HW: Estimate depth, clean data, map reads.
 		\end{itemize}
-	\item Wed. Reading: TBA
+	\item 1/21 Reading: TBA
 \end{itemize}
 
 \item Workshop/Reading
 	\begin{itemize}
-	\item 1/26 Mon. Workshop: SNPs and diversity
+	\item 1/26 Workshop: SNPs and diversity
 		\begin{itemize}
 		\item SNP calling, genotype likelihoods, ANGSD intro
 		\item HW: call genotypes, estimate diversity and D across a chromosome (one chromosome per group)
 		\end{itemize}
-	\item 1/28 Wed. Reading: TBA
+	\item 1/28 Reading: TBA
 \end{itemize}
 
 \item Workshop/Reading
